
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int DWORD ;
typedef int BYTE ;



BYTE * find_jmp (BYTE *lpAddress, DWORD dwSize)
{
 DWORD i;
 BYTE *p;
 BYTE *retval = ((void*)0);

 for (i=0;i<(dwSize-4);i++)
 {
  p = lpAddress + i;



  if ((p[0] > 0x57) && (p[0] < 0x5F) && (p[1] > 0x57) && (p[1] < 0x5F) && (p[2] > 0xC1) && (p[2] < 0xC4))
  {
   retval = p;
   break;
  }



  if ( (p[0] == 0xFF) &&
        (p[1] == 0x54) &&
        (p[2] == 0x24) &&
        (p[3]==0x8) )
  {
   retval = p;
   break;
  }
 }

 return retval;

}
