; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_3897.c_find_jmp.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_3897.c_find_jmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @find_jmp(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32* null, i32** %7, align 8
  store i32 0, i32* %5, align 4
  br label %8

8:                                                ; preds = %72, %2
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* %4, align 4
  %11 = sub nsw i32 %10, 4
  %12 = icmp slt i32 %9, %11
  br i1 %12, label %13, label %75

13:                                               ; preds = %8
  %14 = load i32*, i32** %3, align 8
  %15 = load i32, i32* %5, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i32, i32* %14, i64 %16
  store i32* %17, i32** %6, align 8
  %18 = load i32*, i32** %6, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 0
  %20 = load i32, i32* %19, align 4
  %21 = icmp sgt i32 %20, 87
  br i1 %21, label %22, label %49

22:                                               ; preds = %13
  %23 = load i32*, i32** %6, align 8
  %24 = getelementptr inbounds i32, i32* %23, i64 0
  %25 = load i32, i32* %24, align 4
  %26 = icmp slt i32 %25, 95
  br i1 %26, label %27, label %49

27:                                               ; preds = %22
  %28 = load i32*, i32** %6, align 8
  %29 = getelementptr inbounds i32, i32* %28, i64 1
  %30 = load i32, i32* %29, align 4
  %31 = icmp sgt i32 %30, 87
  br i1 %31, label %32, label %49

32:                                               ; preds = %27
  %33 = load i32*, i32** %6, align 8
  %34 = getelementptr inbounds i32, i32* %33, i64 1
  %35 = load i32, i32* %34, align 4
  %36 = icmp slt i32 %35, 95
  br i1 %36, label %37, label %49

37:                                               ; preds = %32
  %38 = load i32*, i32** %6, align 8
  %39 = getelementptr inbounds i32, i32* %38, i64 2
  %40 = load i32, i32* %39, align 4
  %41 = icmp sgt i32 %40, 193
  br i1 %41, label %42, label %49

42:                                               ; preds = %37
  %43 = load i32*, i32** %6, align 8
  %44 = getelementptr inbounds i32, i32* %43, i64 2
  %45 = load i32, i32* %44, align 4
  %46 = icmp slt i32 %45, 196
  br i1 %46, label %47, label %49

47:                                               ; preds = %42
  %48 = load i32*, i32** %6, align 8
  store i32* %48, i32** %7, align 8
  br label %75

49:                                               ; preds = %42, %37, %32, %27, %22, %13
  %50 = load i32*, i32** %6, align 8
  %51 = getelementptr inbounds i32, i32* %50, i64 0
  %52 = load i32, i32* %51, align 4
  %53 = icmp eq i32 %52, 255
  br i1 %53, label %54, label %71

54:                                               ; preds = %49
  %55 = load i32*, i32** %6, align 8
  %56 = getelementptr inbounds i32, i32* %55, i64 1
  %57 = load i32, i32* %56, align 4
  %58 = icmp eq i32 %57, 84
  br i1 %58, label %59, label %71

59:                                               ; preds = %54
  %60 = load i32*, i32** %6, align 8
  %61 = getelementptr inbounds i32, i32* %60, i64 2
  %62 = load i32, i32* %61, align 4
  %63 = icmp eq i32 %62, 36
  br i1 %63, label %64, label %71

64:                                               ; preds = %59
  %65 = load i32*, i32** %6, align 8
  %66 = getelementptr inbounds i32, i32* %65, i64 3
  %67 = load i32, i32* %66, align 4
  %68 = icmp eq i32 %67, 8
  br i1 %68, label %69, label %71

69:                                               ; preds = %64
  %70 = load i32*, i32** %6, align 8
  store i32* %70, i32** %7, align 8
  br label %75

71:                                               ; preds = %64, %59, %54, %49
  br label %72

72:                                               ; preds = %71
  %73 = load i32, i32* %5, align 4
  %74 = add nsw i32 %73, 1
  store i32 %74, i32* %5, align 4
  br label %8

75:                                               ; preds = %69, %47, %8
  %76 = load i32*, i32** %7, align 8
  ret i32* %76
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
